[package]
name = "ctp-qry-order"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Li <ivanli2048@gmail.com>"]

[dependencies]
config = { version = "0.14.1", features = ["toml"] }
ctp2rs = { version = "0.1.3", features = ["ctp_v6_7_8"] }
dirs = "5.0.1"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.37", features = ["serde", "formatting"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.19"
